Added support for thin walls

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div id="app"></div>
-        <!-- <canvas id="angles-demo"></canvas> -->
-        <canvas id="angles-demo"></canvas>
-        <canvas id="world-building"></canvas>
-        <canvas id="maze-runner"></canvas>
-        <canvas id="sheepish-3D"></canvas>
+        <!-- <canvas id="angles-demo"></canvas>
+             <canvas id="world-building"></canvas>
+             <canvas id="maze-runner"></canvas>
+             <canvas id="sheepish-3D"></canvas> -->
+        <canvas id="textured"></canvas>
         <script src="cljs-out/dev-main.js" type="text/javascript"></script>
     </body>
 </html>
